@startuml ZXSneakers
entity Users {
 email : String(100) <PK>
 --
 name : String(20)
 password : String(100)
 avatar : String(191)
}

entity Admin {
 email : String(100) <PK>
 --
 password : String(100)
}

entity Products {
 Id : Int <PK>
 --
 sku : String(100)
 name : String(100)
 description : Text
 color : String(50)
 size : String(2)
 price : Int(11)
 stock : Int(11)
 created_at : Datatime
 updated_at : Datetime
}

entity Product_images {
 id : Int (AI) <PK>
 product_id : Int <FK>
 --
 link : String(191)
}

entity Addresses {
 id : Int (AI) <PK>
 --
 user_email : String <FK>
 --
 no_telp : String(20)
 postal_code : Int(11)
 street : String(100)
 sub_distric : String(100)
 city : String(100)
 province : String(100)
 country : String(100)
}

object Carts {
 email_user : String <FK>
 product_id : Int <FK>
}

object Orders {
 id : String <PK>
 user_email : String <FK>
 address_id : Int <FK>
 --
 price_total : Int
 created_at : Datetime
 status : String
}

object Order_details {
 id : Int AI <PK>
 order_id : String <FK>
 product_id : Int <FK>
 --
 price_item : Int
 quantity : Int
 subtotal : Int
}

Users ||--o{ Addresses
note on link
    Have
end note

Products ||--|{ Product_images
note on link
    Have
end note

Users }o-- Carts
Carts --|{ Products

Users }o-- Orders
Orders }|--|| Addresses

Order_details --|{ Products
Orders ||--|{ Order_details

Admin --> Products
note on link
    Add, Delete, Update
end note
@enduml